Apply transform fails to clear delta transform values #99070

Closed
opened 2022-06-21 23:20:22 +02:00 by Daniel Salazar · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: a18c291435

Short description of error
Apply transform works correctly when transform is in the delta values but it fails to clear the delta transform value.

Exact steps for others to reproduce the error
Apply Transform.blend
Apply the Rotation on the selected object

What happens:
Transforms are applied correctly, but the delta rotation is not cleared, resulting in the monkey pointing down.
If you keep applying the rotation the monkey keeps spinning

What should happen:
Delta transform values should be cleared, resulting in the mesh appearing visually unchanged but with the delta transform removed

Note1: The exact same problem happens with Scale
Note2: for some reason Delta Location is completely ignored by apply transform

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: `a18c291435` **Short description of error** Apply transform works correctly when transform is in the delta values but it fails to clear the delta transform value. **Exact steps for others to reproduce the error** [Apply Transform.blend](https://archive.blender.org/developer/F13213934/Apply_Transform.blend) Apply the Rotation on the selected object What happens: Transforms are applied correctly, but the delta rotation is not cleared, resulting in the monkey pointing down. If you keep applying the rotation the monkey keeps spinning What should happen: Delta transform values should be cleared, resulting in the mesh appearing visually unchanged but with the delta transform removed Note1: The exact same problem happens with Scale Note2: for some reason Delta Location is completely ignored by apply transform
Poster
Collaborator

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2022-06-22 13:59:13 +02:00

Fixing this won't be hard I think. Claiming the task.

Fixing this won't be hard I think. Claiming the task.

This issue was referenced by 4b3b8156ee

This issue was referenced by 4b3b8156ee443decdd224a99bb4fac69afb0f4f9

This issue was referenced by 279e7dac7d

This issue was referenced by 279e7dac7dcfc0a7d4126c55a23a745362c293dc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99070
There is no content yet.